added vercel analytics

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content ="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Birdle </title>
-	
+
 	<script src="Bmain.js"></script>
 	<link rel="stylesheet" href="Bstylesheet.css"/>
 </head>
@@ -60,4 +60,6 @@
 			</div>
 		</div>
 	</div>
+	<!-- Vercel Analytics -->
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
